--- a/photos.html
+++ b/photos.html
@@ -23,67 +23,165 @@
     <section class="photo-gallery">
       <div class="gallery-grid" id="photoGrid">
         <!-- Sample photos to start with -->
-        <div class="photo-item" data-caption="Morning croissant at my favorite boulangerie">
+        <div class="photo-item" data-caption="World's Largest Flea">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1555507036-ab794f1df947?w=400&h=600&fit=crop" alt="Croissant and coffee" loading="lazy">
+          <img src="flea.jpg" alt="Amsterdam Flea" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">Morning croissant at my favorite boulangerie</p>
+            <p class="photo-caption">World's Largest Flea</p>
           </div>
         </div>
 
-        <div class="photo-item" data-caption="Sunset from my tiny apartment balcony">
+        <div class="photo-item" data-caption="Giverny">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1502602898536-47ad22581b52?w=400&h=500&fit=crop" alt="Paris sunset" loading="lazy">
+          <img src="giverny.jpg" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">Sunset from my tiny apartment balcony</p>
+            <p class="photo-caption">Monet's Garden</p>
           </div>
         </div>
 
-        <div class="photo-item" data-caption="Wandering through Montmartre on Sunday">
+        <div class="photo-item">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1502602898536-47ad22581b52?w=400&h=400&fit=crop" alt="Montmartre streets" loading="lazy">
+          <img src="pachamama.jpg" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">Wandering through Montmartre on Sunday</p>
+            <p class="photo-caption">pachamama !! </p>
           </div>
         </div>
 
-        <div class="photo-item" data-caption="The bookshop café in Belleville I discovered">
+        <div class="photo-item">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?w=400&h=550&fit=crop" alt="Cozy bookshop" loading="lazy">
+          <img src="museum.jpg" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">The bookshop café in Belleville I discovered</p>
+            <p class="photo-caption">stunning salon </p>
           </div>
         </div>
 
-        <div class="photo-item" data-caption="Fresh flowers at the local market">
+        <div class="photo-item">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=400&h=450&fit=crop" alt="Market flowers" loading="lazy">
+          <img src="felicity.jpg" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">Fresh flowers at the local market</p>
+            <p class="photo-caption">7 year tradition still going strong </p>
           </div>
         </div>
 
-        <div class="photo-item" data-caption="Late night coding session with city lights">
+        <div class="photo-item">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=400&h=350&fit=crop" alt="Night coding" loading="lazy">
+          <img src="fondue.jpg" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">Late night coding session with city lights</p>
+            <p class="photo-caption">i wrote my name on this chair </p>
           </div>
         </div>
 
-        <div class="photo-item" data-caption="Metro commute views I never get tired of">
+        <div class="photo-item">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1502602898536-47ad22581b52?w=400&h=600&fit=crop" alt="Metro view" loading="lazy">
+          <img src="grouvie.jpg" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">Metro commute views I never get tired of</p>
+            <p class="photo-caption"></p>
           </div>
         </div>
 
-        <div class="photo-item" data-caption="Perfect café au lait art">
+        <div class="photo-item">
           <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
-          <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=400&h=400&fit=crop" alt="Coffee art" loading="lazy">
+          <img src="kendrick.jpg" loading="lazy">
           <div class="photo-overlay">
-            <p class="photo-caption">Perfect café au lait art</p>
+            <p class="photo-caption">on the floor for kendrick and sza</p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="me_on_boat.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">Me on Boat !</p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="pride.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">baby's first pride</p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="strawberries.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption"> most colorful strawberries i've ever seen </p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="varda.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption"> </p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="versailles.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">rawr</p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="agnes.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption"></p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="amsterdam.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">Amsterdam!</p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="amsterdamshop.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption"></p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="canal.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">me on canal</p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="baby_bottle.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">Wine out of baby bottles</p>
+          </div>
+        </div>
+
+      
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="eiffel.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">iconic view</p>
+          </div>
+        </div>
+
+        <div class="photo-item">
+          <button class="delete-photo-btn" onclick="deletePhoto(this)" title="Delete photo">×</button>
+          <img src="concert.jpg" loading="lazy">
+          <div class="photo-overlay">
+            <p class="photo-caption">i ascended</p>
           </div>
         </div>
       </div>
