added home page

--- a/index.html
+++ b/index.html
@@ -20,18 +20,22 @@
 
   <main>
     <section class="intro">
-      <h2>Hello, I'm Molly!</h2>
-      <p>This is my slice of life in Paris — a creative mix of journal entries, tech adventures, photography, videos, and random ideas. Follow along as I navigate internship life, discover hidden café corners, and collect moments in this beautiful city that's become my temporary home.</p>
+      <h2>Molly est ici!</h2>
+      <p>This is my slice of life in Paris — a creative mix of journal entries, adventures, photography, videos, and random ideas. I am making this as a scrapbook/journal for my time in Paris. 2 months is a long time in a new city, and I hope this provides you with a snapshot of my life (the good and the bad) here. Follow along for fun ✌️</p>
     </section>
 
     <section>
-      <h2>Currently</h2>
-      <p>Spending my summer interning at a tech startup in the 11th arrondissement, perfecting my café order in French, and documenting every sunset from my tiny apartment balcony. Paris has this way of making even the mundane feel magical ✨</p>
+      <h2>Currently (Updated: July 25, 2025)</h2>
+      <p> It is my last week in Paris as I am writing this, and it has been such a wonderful experience. I definitely fell in love with this city while being here for 2 months. I desperately hope to come back and live here again. If anything, this program and experience has taught me that I am capable of living away from home and that the world has so much to offer. I am going to miss my friends who don't go to Cal but I will forever cherish the time I've had here.</p>
     </section>
 
     <section>
       <h2>What You'll Find Here</h2>
-      <p>Raw thoughts from late-night coding sessions, snapshots of weekend adventures, video diaries of my daily commute through the metro, and a collection of creative ideas that strike during long walks along the Seine. This is my digital scrapbook of becoming.</p>
+      <p> I wanted to build a website for my final project because it is what I have been doing for my internship here. Not directly this website, but coding tools and interfaces for my company. Originally, I had a lot of knowledge but not much implementation practice. Here, you'll find a creative snapshot of the technical skills I've gained, along with thoughts and updates about my time in Paris.</p>
+      <p> I added a lot of cool features like writing blog posts, uploading pictures, and making moodboards on here, however do not expect them to continuously update the site. I would have had to spend more time develpping and deploying a database, which costs money and time I simply did not have (they do work though!).
+        Additionally, it is normal to have some lag when loading each page (again I am using free resources and coded this from scratch so it affects the efficiency of each section)
+      </p>
+      <p>Have a look around the site and hope you can catch a glimpse inside my life and thoughts!</p>
     </section>
   </main>
 
