--- a/videos.html
+++ b/videos.html
@@ -34,7 +34,7 @@
         </video>
         
         <div class="video-info">
-          <h2 id="videoTitle" class="video-title">vlog</h2>
+          <h2 id="videoTitle" class="video-title">Fête de la Musique</h2>
         </div>
       </div>
     </section>
