--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section>
       <h2>What You'll Find Here</h2>
       <p> I wanted to build a website for my final project because it is what I have been doing for my internship here. Not directly this website, but coding tools and interfaces for my company. Originally, I had a lot of knowledge but not much implementation practice. Here, you'll find a creative snapshot of the technical skills I've gained, along with thoughts and updates about my time in Paris.</p>
-      <p> I added a lot of cool features like writing blog posts, uploading pictures, and making moodboards on here, however do not expect them to continuously update the site. I would have had to spend more time develpping and deploying a database, which costs money and time I simply did not have (they do work though!).
-        Additionally, it is normal to have some lag when loading each page (again I am using free resources and coded this from scratch so it affects the efficiency of each section)
+      <p> I added a lot of cool features like writing blog posts, uploading pictures, and making moodboards on here, however do not expect them to continuously update the site. I would have had to spend more time develpping and deploying a database, which costs money and time I simply did not have (they do work and I did use them to update my site!).
+        Additionally, it is normal to have some lag when loading each page (again I am using free resources and coded this from scratch so it affects the efficiency of each section). Also click a video from the carrousel to watch it!
       </p>
       <p>Have a look around the site and hope you can catch a glimpse inside my life and thoughts!</p>
     </section>
