--- a/videos.html
+++ b/videos.html
@@ -30,7 +30,6 @@
           preload="metadata"
         >
           <source src="IMG_1227.MOV" type="video/MOV">
-          Your browser does not support the video tag.
         </video>
         
         <div class="video-info">
@@ -81,7 +80,7 @@
               <source src="france_22_3.mp4" type="video/mp4">
             </video>
             <div class="carousel-overlay">
-              <h4>france 2022</h4>
+              <h4>outta paris</h4>
             </div>
           </div>
         
@@ -113,7 +112,7 @@
         poster: "IMG_1758.jpg"
       },
       {
-        title: "france 2022",
+        title: "outta paris",
         src: "france_22_3.mp4",
         poster: "canal.jpg"
       }
